fixed alignment

--- a/css/main.css
+++ b/css/main.css
@@ -96,6 +96,10 @@ nav a {
   justify-content: center;
 }
 
+.message {
+  color:#FFFFFF;
+}
+
 @media all and (max-width: 768px) {
   .banner {
     max-height: 200px;
@@ -245,6 +249,16 @@ nav a {
   border-radius: 12px;
 }
 
+#personalizationform {
+  width: 100%;
+  max-width: 600px;
+  padding: 30px;
+  background-color: #FFFFFF;
+  box-shadow: 0 20px 120px rgba(0, 0, 0, 0.2);
+  align-items: center;
+  border-radius: 12px;
+}
+
 .imgBox {
   min-width: 500px;
   max-width: 500px;
@@ -295,6 +309,10 @@ nav a {
 
 @media screen and (max-width: 960px) {
   .card {
+    max-width: 600px;
+  }
+
+  #personalizationform {
     max-width: 750px;
   }
   
@@ -306,6 +324,12 @@ nav a {
 
 @media screen and (max-width: 768px) {
   .card {
+    padding: 20px;
+    flex-direction: column;
+    margin-top: 50px;
+  }
+
+  #personalizationform {
     padding: 20px;
     flex-direction: column;
     margin-top: 50px;
